force-app/main/default/objects/WeeklyReport__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(Account__c != NULL,HYPERLINK(&apos;/&apos; &amp; Account__r.Id, Account__r.Name,&apos;_blank&apos;),
IF(Opportunity__c != NULL,HYPERLINK(&apos;/&apos; &amp; Opportunity__r.AccountId, Opportunity__r.Account.Name,&apos;_blank&apos;),
  IF(SalesLead__c != NULL,HYPERLINK(&apos;/&apos; &amp; SalesLead__r.AccountId__r.Id, SalesLead__r.AccountId__r.Name,&apos;_blank&apos;),NULL)))</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>