force-app/main/default/objects/WeeklyReport__c/fields/CheckedforIssue__c.field-meta.xml
<CustomField>
    <fullName>CheckedforIssue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checked for Issue</label>
    <type>Checkbox</type>
</CustomField>