force-app/main/default/objects/WeeklyReport__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <label>Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
                <default>true</default>
                <label>Insert</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>Update</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Delete</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>