force-app/main/default/objects/WeeklyReport__c/fields/Issue_Description_Check__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description_Check__c</fullName>
    <label>New Editor</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>