force-app/main/default/objects/WeeklyReport__c/fields/IsTransmit__c.field-meta.xml
<CustomField>
    <fullName>IsTransmit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Transmit</label>
    <type>Checkbox</type>
</CustomField>