force-app/main/default/objects/WeeklyReport__c/fields/ReportingDate__c.field-meta.xml
<CustomField>
    <fullName>ReportingDate__c</fullName>
    <label>Reporting Date</label>
    <type>Date</type>
</CustomField>