force-app/main/default/objects/WeeklyReport__c/fields/SalesLead__c.field-meta.xml
<CustomField>
    <fullName>SalesLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Lead</label>
    <referenceTo>Sales_Lead__c</referenceTo>
    <relationshipLabel>Weekly Report</relationshipLabel>
    <relationshipName>Weekly_Report</relationshipName>
    <type>Lookup</type>
</CustomField>