force-app/main/default/objects/WeeklyReport__c/fields/Transmitdate__c.field-meta.xml
<CustomField>
    <fullName>Transmitdate__c</fullName>
    <label>Transmit date</label>
    <type>DateTime</type>
</CustomField>