force-app/main/default/objects/WeeklyReport__c/fields/User_Department__c.field-meta.xml
<CustomField>
    <fullName>User_Department__c</fullName>
    <formula>CreatedBy.DepartmentName__c</formula>
    <label>Department (Created By)</label>
    <type>Text</type>
</CustomField>