force-app/main/default/objects/WeeklyReport__c/fields/User_Division__c.field-meta.xml
<CustomField>
    <fullName>User_Division__c</fullName>
    <formula>CreatedBy.Division__c</formula>
    <label>Division (Created By)</label>
    <type>Text</type>
</CustomField>