force-app/main/default/objects/WeeklyReport__c/validationRules/Charater_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Charater_Limit</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( Issue_Description_Check__c ) &gt; 131070</errorConditionFormula>
    <errorMessage>Issue Description limit exceeds</errorMessage>
</ValidationRule>