force-app/main/default/objects/WeeklyReport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>SalesLead__c</columns>
    <columns>ReportingDate__c</columns>
    <columns>Critical__c</columns>
    <columns>Contents__c</columns>
    <columns>CheckedforIssue__c</columns>
    <columns>Flag__c</columns>
    <columns>DisplayOrder__c</columns>
    <columns>IssueDescription__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Weekly Reports</label>
</ListView>